prototype/static/src/containers/App/styles/app.scss
/* global styles */
@import 'fonts/roboto';
@import 'typography';
@import 'links';

:global(body) {
  position: relative;
  font-family: 'Roboto', sans-serif !important;
  
  text-rendering: optimizeLegibility !important;
   -webkit-font-smoothing: antialiased !important;

  h1, h2, h3, h4 {
    font-weight: 300;
  }

}

// Variables
$break-small: 768px;


// ------
// NAVIGATION CONTAINER
// ------

#both-nav {
	position: fixed;
	width: 100%;
	top: 0px;
	margin-top: 0;
	padding-top: 0;
	height: 120px;
	z-index: 100;	
}

// ------
// TOP NAVIGATION
// ------

#both-nav #top-nav {
	position: relative;
	background-color: #1d1d1d;
	border-radius: 0px; 
	margin-bottom: 0px;
	height: 60px;
	border: none;
}

#top-nav .container {
	margin: 0 !important;
	padding: 0 !important;
	width: 100% !important;
}

#top-nav .container .navbar-collapse {
	padding: 0;
}

#both-nav #top-nav .brand-logo {
	width: 60px;
	height: 60px;
	font-size: 32px;
	font-weight: 900;
	color: #ffffff;
	margin-left: 0;
	padding-top: 18px;
	padding-left: 18px;
	border-right: 1px solid #000000;	
}

// Stages

#top-nav #top-nav-stages {

}

#both-nav #top-nav #top-nav-stages li {
	margin: 0;
	padding: 0;
	padding-left: 32px;
	padding-right: 32px;
	height: 60px;
}

#both-nav #top-nav ul#top-nav-stages li a {
	margin: 0;
	padding: 0;
	height: 100%;
}

#both-nav #top-nav ul#top-nav-stages li {
	border-right: 1px solid #000000;
}

#both-nav #top-nav ul#top-nav-stages li.current-stage a div span.ordinal_stage,
#both-nav #top-nav ul#top-nav-stages li.current-stage a div span.stage_title {
	color: #ffffff;
}

#both-nav #top-nav ul#top-nav-stages li.current-stage {
	background-color: #4A4A4A;
}

#both-nav #top-nav #top-nav-stages li a div span.ordinal_stage {
	display: block;
	font-size: 11px;
	font-weight: 300;
	letter-spacing: normal;
	color: #ffffff;
	margin: 0;
	padding: 0;
	margin-top: 10px;
}

#both-nav #top-nav #top-nav-stages li a div span.stage_title {
	display: block;
	font-size: 16px;
	font-weight: 700;
	color: #ffffff;
	margin: 0;
	margin-top: -4px;
	padding: 0;	
}

// Right Nav

// My Requests

#both-nav #top-nav ul#top-nav-right-nav {
	height: 60px;
	float: right;
	margin-right: 0;
	font-size: 14px;	
	font-weight: 600;
	color: #ffffff;
}

#both-nav #top-nav ul#top-nav-right-nav .my-requests {
	height: 60px;
	padding: 0;
	margin: 0;
	padding-top: 5px;
	padding-left: 28px;
	padding-right: 28px;
	border-left: 1px solid #000000;			
}

#both-nav #top-nav ul#top-nav-right-nav .my-requests a {
	color: #ffffff;
}

// User Menu

#both-nav #top-nav ul#top-nav-right-nav .top-nav-user-menu {
	padding-top: 19px;
	padding-left: 28px;
	padding-right: 28px;
	height: 100%;
	border-left: 1px solid #000000;				
}

#both-nav #top-nav ul#top-nav-right-nav .top-nav-user-menu a {
	display: block;
	padding: 0;
	margin: 0;
	width: 100%;
	height: 100%;
	color: #ffffff;	
}

#both-nav #top-nav ul#top-nav-right-nav .top-nav-user-menu img {
	width: 24px;
	margin-right: 10px;
}

// Log out button
#both-nav #top-nav ul#top-nav-right-nav .top-nav-user-menu ul.dropdown-menu {
	width: 100%;
	background-color: #1d1d1d; 
	border-radius: 0;
	height: 60px;
	padding-top: 19px;	
	padding-left: 28px;
	padding-right: 28px;
	border: none;
}

// TODO: Fix hover styles for dropdown menu
#top-nav-right-nav > li.top-nav-user-menu.dropdown.open {
	background-color: #0f0f0f;
}

// ------
// SUB NAVIGATION
// ------

.navbar-inverse .navbar-collapse {
	padding: 0 !important;
}

#both-nav #sub-nav {
	position: relative;
	background-color: #ffffff;
	padding: 0;
	margin: 0;
	border-radius: 0;
	height: 60px;
	border: none;
	border-bottom: solid 1px #d8d8d8;
}

#both-nav #sub-nav .container {
	padding: 0 !important;
	margin: 0 !important;
	// TODO: Figure out what's the right container size 
	margin-left: 20% !important;
	margin-right: 10% !important;
}

#both-nav #sub-nav ul li {
	position: relative;
}

#both-nav #sub-nav ul li a {
	display: block;
	background-color: #ffffff;
	height: 100%;
	width: 100%;
	font-size: 14px;
	font-weight: 900;
	text-transform: uppercase;
	color: #1a1a1a;
	letter-spacing: -0.14px;
	padding-left: 32px;
	padding-right: 32px;
	padding-top: 20px;
}

#both-nav #sub-nav ul li a img {
	position: relative;
	top: -1px;
	margin-left: 10px;
	width: 4px;
}

#both-nav #sub-nav ul li a div.caret-right {
	position: relative;
	top: -1px;
	display: inline-block;
	width: 4px;
	height: 7px;
	background-size: cover;
	background-image: url('../../../images/caret-dark-right.png');
	margin-left: 10px;
}

#both-nav #sub-nav ul li:hover a,
#both-nav #sub-nav ul li:focus a,
#both-nav #sub-nav ul li.active a {
	border-bottom: 5px solid #0000FF;
	color: #0000ff;
}

#both-nav #sub-nav ul li:hover a div.caret-right,
#both-nav #sub-nav ul li:focus a div.caret-right,
#both-nav #sub-nav ul li.active a div.caret-right, {
	background-image: url('../../../images/caret-light-right.png');
}


// ------
// MAIN CONTENT PAGES
// ------

.page-view.container {
	position: relative;
	top: 120px;
	margin:0 !important;
	padding:0 !important;
	width: 100%;
	height: 100%;
}

.page-view.container.page-main {
	padding-left: 20% !important;
	padding-right: 10% !important;
}

.page-view.container.page-requests {
	padding-left: 10% !important;
	padding-right: 10% !important;
}


.page-view .container {
	margin:0 !important;
	padding:0 !important;
	width: 100%;
}

// ------
// BUTTON STYLES
// ------



button,
button.btn,
button.btn-default,
button.short-button,
button.cta,
.container button,
{
	color: #ffffff;
	font-size: 16px;
	background-color: #1A1A1A;
	border: none;
	text-transform: uppercase;
	font-weight: 600;
	padding-top: 16px;
	padding-bottom: 16px;	
	border-radius: 0 !important;
}

button:hover,
button.btn:hover,
button.short-button:hover,
button:focus,
button.btn:focus,
button.short-button:focus, {
	color: #ffffff;
	background-color: #4C4C4C;
}
/* ... */

